Fixes issue with directory in script, adjusts css to prevent flickering, adds drop shadow to CC logo, spacing and styling of the links to repo and rmkit, adjusts config and read me as well

--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ body {
     margin: 0 20px;
 }
 
+img:not(.copy) {
+    min-height: 220px;
+    height: 220px;
+    max-height: 220px;
+}
+
+#app {
+    min-height: 100vh;
+}
+
+.album-photo {
+    min-height: 220px;
+    height: 220px;
+}
+
 #app {
     margin: 0 auto;
     max-width: 1000px;
@@ -69,18 +84,26 @@ section {
 
 .copy {
     height: 20px;
-    margin: 5px;
-  }
+    margin: 5px 12px;
+    transition: linear 0.3s;
+}
+
+.copy:hover {
+    filter: drop-shadow(0px 6px 5px #333);
+    transition: linear 0.3s;
+}
 
 a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
+    font-weight: 200;
+    color: #adadad;
+    color: #777777;
+    text-decoration: overline;
+    transition: linear 0.8s;
 }
 
 a:hover {
-    color: #0056b3;
-    text-decoration: underline;
+    color: unset;
+    transition: linear 0.4s;
 }
 
 footer {
